--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
         // socket.emit('mensaje-to-server', { data });
         
         // Para escuchar
-        socket.on('mensaje-from-server', (data) => {
-            // callback a ejecutar
-        });
+        // socket.on('mensaje-from-server', (data) => {
+        //     // callback a ejecutar
+        // });
         
 
     </script>
